--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "build-cf": "ng build --environment 'cf'",
+    "build-cf-cloud": "ng build --environment 'cf-cloud'",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -22,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "angular-oauth2-oidc": "^3.1.4",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
     "rxjs": "^5.5.6",
