--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,7 @@ applications:
 - name: cv-web-app
   memory: 128M
   instances: 1
-  path: dist/
+  path: ./dist/
   buildpack: staticfile_buildpack
   disk_quota: 256M
 
