--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-oauth2-oidc": "^3.1.4",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
+    "ngx-editor": "^3.3.0-rc.13",
     "rxjs": "^5.5.6",
     "underscore": "^1.8.3",
     "zone.js": "^0.8.19"
